--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "description": "backend at chai aur code playlist on youtube by Hitesh Choudhary",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javasctipt",
     "backend"
   ],
   "author": "Harsh Vardhan Sharma",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
