--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config src/index.js"
   },
   "keywords": [
     "javasctipt",
@@ -16,5 +16,11 @@
   "devDependencies": {
     "nodemon": "^3.0.3",
     "prettier": "^3.2.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "express.js": "^1.0.0",
+    "mongoose": "^8.1.1"
   }
 }
